MODRR-18 Fix Patron permission get API issues